# infra-aware-RAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TASKS.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: FUNDING.yml
config/: example.yaml
docs/: 01-data-ingestion.md  02-indexing-and-search.md  03-api-and-tools.md  04-llm-orchestration-and-ui.md  PLAN.md  api-reference.md  chat-ui-guide.md  cli-guide.md  contributing.md  deployment-guide.md  troubleshooting.md
docs/schemas/: README.md
frontend/: .env.example  README.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: LoginPage.tsx
frontend/src/components/Chat/: ChatContainer.tsx  ChatPage.tsx  InputBar.tsx  MessageItem.tsx  MessageList.tsx  ToolCallDisplay.tsx
frontend/src/components/Sidebar/: ConversationSidebar.tsx
frontend/src/components/common/: CodeBlock.tsx  Header.tsx  LoadingIndicator.tsx  ResourceLink.tsx
frontend/src/hooks/: index.ts  useAuth.ts  useChat.ts  useStream.ts
frontend/src/services/: api.ts  auth.ts
frontend/src/types/: index.ts
infrastructure/containerapp/: README.md  containerapp.yaml  deploy.sh
infrastructure/monitoring/: README.md  alerts.json  dashboard.json
src/: __init__.py
src/api/: __init__.py  dependencies.py  main.py
src/api/middleware/: __init__.py  app_insights.py  auth.py  logging.py  rate_limit.py
src/api/models/: __init__.py  conversation.py  git.py  resources.py  search.py  terraform.py
src/api/routers/: __init__.py  conversations.py  git.py  resources.py  search.py  terraform.py  tools.py
src/api/services/: __init__.py  git_service.py  resource_service.py  terraform_service.py
src/api/tools/: __init__.py  definitions.py
src/cli/: __init__.py  main.py
src/indexing/: __init__.py  change_feed.py  chunkers.py  embeddings.py  graph_builder.py  indexer.py  models.py  monitoring.py  orchestrator.py  search_index.py
src/ingestion/: __init__.py  models.py  orchestrator.py
src/ingestion/connectors/: azure_resource_graph.py  git_connector.py  terraform_hcl.py  terraform_plan.py  terraform_state.py
src/models/: __init__.py  documents.py  schema_export.py
src/orchestration/: __init__.py  conversation.py  engine.py  memory.py  models.py  prompts.py
src/search/: __init__.py  hybrid_search.py  models.py
tests/: __init__.py
tests/fixtures/terraform/: config.tf.json  main.tf  plan.json
tests/integration/: test_azure_resource_graph.py  test_graph_builder.py  test_search_index.py  test_tools_integration.py
tests/unit/: test_api_dependencies.py  test_api_main.py  test_azure_resource_graph.py  test_chunkers.py  test_cli.py  test_conversation_manager.py  test_conversations_router.py  test_embeddings.py  test_git_connector.py  test_git_router.py  test_graph_builder.py  test_hybrid_search.py  test_indexer.py  test_indexing_monitoring.py  test_indexing_orchestrator.py  test_ingestion_models.py  test_issue_fixes.py  test_memory_store.py  test_middleware.py  test_orchestration_engine.py  test_orchestration_models.py  test_orchestration_prompts.py  test_orchestrator.py  test_resources_router.py  test_search_index.py  test_search_router.py  test_terraform_hcl.py  test_terraform_plan.py  test_terraform_router.py  test_terraform_state.py  test_tool_definitions.py  test_tools_router.py
